adding version for future handling

--- a/FrameworkRepository/FrameworkRepository.csproj
+++ b/FrameworkRepository/FrameworkRepository.csproj
@@ -9,6 +9,7 @@
     <RepositoryUrl>https://github.com/AndrewFahmy/framework-repository</RepositoryUrl>
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>entity framework repository .net dotnet</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
