--- a/FrameworkRepository/FrameworkRepository.csproj
+++ b/FrameworkRepository/FrameworkRepository.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Authors>Andrew Fahmy</Authors>
     <Description>A simple generic repository that works with .net entity framework 5+</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -9,7 +9,7 @@
     <RepositoryUrl>https://github.com/AndrewFahmy/framework-repository</RepositoryUrl>
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>entity framework repository .net dotnet</PackageTags>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,9 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.12" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
