adding a read-me file

--- a/FrameworkRepository/FrameworkRepository.csproj
+++ b/FrameworkRepository/FrameworkRepository.csproj
@@ -10,12 +10,17 @@
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>entity framework repository .net dotnet</PackageTags>
     <Version>1.0.4</Version>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
+    </None>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
 
